--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
     "@next/font": "13.1.1",
+    "@tanstack/react-query": "^4.20.4",
     "firebase": "^9.15.0",
     "i": "^0.3.7",
     "next": "13.1.1",
